--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addon-links": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "react-test-renderer": "^16.12.0"
   }
 }
